# Pixtory

./: README.md  anotheronhe  blackhole.py  cool.html  fwafaw  pendulum.html  pendulum.py  physics equation simulator.pptx
harish/: PROJECTION.py  heat.py  logistic map.py  lorentz chatic number.py  spring simulation.py
phy w/: combined_grok.cpp  fixed_field_moving_charge.txt  formatRadiationFormula.txt  gravity.txt  spin_simulation.txt  wire.txt
projec/: CMakeLists.txt  CMakePresets.json  RosslerSim.sln  RosslerSim.vcxproj  Source1.cpp  Untitled-1.cpp  UpgradeLog.htm  UpgradeLog2.htm  build_and_run_cpp.cmd  fyaw.md  imgui.ini  rossler_sim.py  scratch_replace.py  scratch_replace_2.py
projec/TouchDesigner_Rossler/: Rossler_TD_Network_Builder.py
